# promptpaws

./: .gitignore  INTEGRATION.md  PLANNING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
corpus/: README.md
corpus/attacks/: adversarial_suffix.json  encoding.json  in_the_wild.json  instruction_override.json  jailbreakv.json  many_shot.json  metabreak.json  obfuscation.json  policy_puppetry.json  roleplay.json  token_break.json
corpus/benign/: benign.json
corpus/known_gaps/: README.md  in_the_wild_missed.json  jailbreakv_templates.json  roleplay_paraphrase.json
examples/: backend_loop.py  supabase_decisions.sql
skills/input-firewall/: SKILL.md
skills/input-firewall/references/: attack-taxonomy.md  detectors.md
skills/output-screening/: SKILL.md
skills/prompt-hardening/: SKILL.md
src/promptpaws/: __init__.py  cli.py  guard.py  hardening.py  judge.py  mcp_server.py  monitoring.py  redteam.py  screening.py  session.py  supabase_corpus.py  verdict.py
src/promptpaws/firewall/: __init__.py  anomaly.py  collapse.py  decode.py  normalize.py  pipeline.py  scan.py  structural.py
tests/: test_anomaly.py  test_cli.py  test_corpus.py  test_firewall_layers.py  test_guard.py  test_hardening.py  test_inspect_alias.py  test_judge.py  test_known_gaps.py  test_mcp_server.py  test_monitoring.py  test_normalize.py  test_pipeline.py  test_readme_examples.py  test_redteam.py  test_screening.py  test_session.py  test_stacking.py  test_supabase_corpus.py
