[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptpaws"
version = "0.1.0"
description = "Layered guardrails that make an LLM chat interface much harder to jailbreak."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]
mcp = ["mcp>=1.2"]

[project.scripts]
promptpaws = "promptpaws.cli:main"
promptpaws-mcp = "promptpaws.mcp_server:main"
promptpaws-redteam = "promptpaws.redteam:main"

[tool.hatch.build.targets.wheel]
packages = ["src/promptpaws"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
